halos/service.yml
kind: Service
apiVersion: v1
metadata:
  name: halos
  namespace: hpehl-dev
  labels:
    app.kubernetes.io/name: halos
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: halos
    deploymentconfig: halos
