halos/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: halos
  namespace: hpehl-dev
  labels:
    app.kubernetes.io/name: halos
spec:
  to:
    kind: Service
    name: halos
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
